<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能手持</string>
    <string name="load_imge_failed">图片加载失败</string>
    <string name="action_settings">Settings</string>
    <string name="quit">quit</string>
    <string name="scan_old_bag_code">是否扫描旧袋码</string>
    <string name="scan_old_code">是否扫描旧条码</string>
    <string name="back_to_lastpage">返回上一页</string>
    <string name="scan">一般扫描</string>
    <string name="lot_scan">批量扫描</string>
    <string name="check">查询</string>
    <string name="setting">设置</string>
    <string name="fqbrk">封签并入库：允许</string>
    <string name="open_bag">开袋：允许</string>
    <string name="recheck">复核：允许</string>
    <string name="examing">验封：允许</string>
    <string name="out">出库：允许</string>
    <string name="in">入库：允许</string>
    <string name="cover_bag">封袋：允许</string>
    <string name="operator">操作人员：Tester</string>
    <string name="lot_inbank">批量入库</string>
    <string name="initbag">初始化基金袋</string>
    <string name="skip">跳过>>></string>
    <string name="read_lock_state">读锁片状态：</string>
    <string name="check_uhf">检查超高频：</string>
    <string name="lot_outbank">批量出库</string>
    <string name="lot_count">批量清点</string>
    <string name="edit_ip">编辑</string>
    <string name="complete">提交</string>
    <string name="ip">000</string>
    <string name="scan_bunch">扫捆页面</string>
    <string name="number">0</string>
    <string name="sure">开始扫捆</string>
    <string name="title_activity_pre_scan">PreScanActivity</string>
    <string name="finger_setting">指纹设置</string>

    <!-- login -->
    <string name="connet_rfid_error">连接 RFID 串口失败</string>
    <string name="connet_finger_error">指纹模块启动失败</string>
    <string name="login_passwd_error">密码错误,请重新输入</string>
    <string name="login_again">请重试</string>
    <string name="login_wait">等待当前任务完成</string>
    <string name="fanfull_change_bag_old_bar">二、扫描旧条码和袋码</string>
    <string name="fanfull_change_bag_recover">三、重新封袋</string>
    <string name="point">.</string>

    <!-- Ativity Title -->
    <string name="main_op_type">操作选择</string>

    <!-- MainActivity -->
    <string name="main_bag_manager">库内管理</string>
    <string name="main_setting">设置</string>
    <string name="main_lot_scan">批量扫描</string>
    <!-- main function -->
    <string name="changbag">换袋操作</string>

    <!-- 换袋 -->
    <string name="fanfull_change_bag_findout">去查漏</string>
    <string name="fanfull_change_bag_open">去开袋</string>
    <string name="fanfull_change_bag_change">去换袋</string>
    <string name="reason_to_change">请选择换袋原因</string>
    <string name="can_not_read">&lt;1> 开袋抽查</string>
    <string name="bagcode_can_not_read">&lt;2> 袋锁读取失败</string>
    <string name="bag_broken">&lt;3> 基金袋损坏</string>
    <string name="bag_has_foreignmatter">&lt;4> 基金袋有异物</string>
    <string name="other">&lt;5> 其他</string>
    <string name="fanfull_change_bag_node_change">&lt;6> 网点换袋</string>
    <string name="change_bag_reason_quit">返回</string>
    <string name="change_bag_reason_ok">进入换袋</string>
    <!-- Update -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新指纹</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_pick_pile">PickPileActivity</string>
    <string name="hello_world">Hello world!</string>

    <!-- 全局提示文本 -->
    <string name="text_please_scan_logincard">请扫描您的登录卡</string>
    <string name="text_please_input_password">请输入密码</string>
    <string name="text_recieve_err">回复异常</string>
    <string name="text_recieve_timeout">回复超时</string>
    <string name="text_click_again_leave">再次点击离开</string>
    <string name="text_init_uhf_failed">超高频模块启动失败</string>
    <string name="text_init_rfid_failed">高频模块启动失败</string>
    <string name="text_init_serial_failed">串口模块启动失败</string>
    <string name="text_init_barcode_failed">二维读头启动失败</string>
    <string name="text_scan_nothing">未扫描到数据</string>
    <string name="text_set_power_success">设置功率成功</string>
    <string name="text_set_power_failed">设置功率失败!</string>
    <string name="text_set_power_illegal">输入的功率必须在5-30之间!</string>
    <string name="text_have_task_running">有任务正在进行</string>
    <string name="text_query_pile_noting">查询不到堆信息</string>
    <string name="text_query_bag_noting">查询不到袋信息</string>
    <string name="title_activity_pick_door">PickDoorActivity</string>
    <string name="title_activity_setting_shut_down">SettingShutDownActivity</string>
    <string name="title_activity_query_bag_circulation">QueryBagCirculationActivity</string>
    <string name="title_activity_setting_transfer">SettingTransferActivity</string>

</resources>
