<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.fanfull.view.ActivityHeadItemView
        android:id="@+id/v_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_op_type"
        title:showImage="true" />

    <Button
        android:id="@+id/btn_main_general_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/scan"
        android:focusable="true" 
        android:textColor="@color/white"
        android:nextFocusRight="@+id/btn_main_lot_scan"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_main_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/main_bag_manager"/>

        <Button
            android:id="@+id/btn_main_lot_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:text="@string/lot_scan" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_main_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:text="@string/setting" />

</LinearLayout>