<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/top_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#339966" ><!-- #FFA500 -->
		<TextView android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
               android:text="@string/skip"
               android:textColor="@color/blue" />
        <TextView
            android:id="@+id/top_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/initbag"
            android:textColor="@color/red"
            android:textSize="20sp" />
        <ImageView android:id="@+id/initbag_quit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="5dp"
                android:src="@drawable/back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/init_l_r"
        android:layout_below="@+id/top_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_lock_state"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/read_lock_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="未完成" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_uhf"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/check_uhf_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="未完成" />
        </LinearLayout>
			<!--UHF初始化左右2边  -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip" 
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="初始化UHF："
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/init_l_uhf"
                android:layout_marginLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="未完成" />
             <TextView
                
                android:layout_marginLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="||" />
              <TextView
                android:id="@+id/init_r_uhf"
                android:layout_marginLeft="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="未完成" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="操作："
                android:textSize="20sp" />

            <TextView
                android:id="@+id/operation_imply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请先完成读锁" 
                android:textSize="20sp"
                android:textColor="#0000ff"/>
        </LinearLayout>
    </LinearLayout>
    
	<LinearLayout android:id="@+id/init_l_r"
	    android:layout_above="@+id/btn"
	    android:layout_width="fill_parent"
	    android:layout_height="32dp"
	    android:orientation="horizontal">
    <Button
            android:id="@+id/init_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="初始化左" 
            android:background="@drawable/button_shape"
            android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"/>
    <Button
            android:id="@+id/init_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="初始化右" 
            android:background="@drawable/button_shape"
            android:layout_marginLeft="112dp"
             android:layout_marginBottom="5dp"/>
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/read_lock"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="读条码" 
            android:background="@drawable/button_shape"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/check_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="读EPC"
            android:background="@drawable/button_shape"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp" />

        

         <Button
            android:id="@+id/ini_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="写入RFID" 
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"/> 
    </LinearLayout>

</RelativeLayout>